@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-03-18T00:42:07Z",
-  "count_outdated" : 247072,
-  "uniques_outdated" : 2478,
-  "count" : 248853,
-  "uniques" : 2505,
+  "timestamp" : "2025-03-19T00:42:36Z",
+  "count_outdated" : 247198,
+  "uniques_outdated" : 2480,
+  "count" : 248978,
+  "uniques" : 2507,
   "clones" : [
     {
-      "timestamp": "2025-03-04T00:00:00Z",
-      "count": 106,
-      "count_minmax": [ 106, 126 ],
-      "count_decinc": [ 20, 126 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
-    {
       "timestamp": "2025-03-05T00:00:00Z",
-      "count": 124,
-      "count_minmax": [ 124, 124 ],
-      "count_decinc": [ 0, 124 ],
+      "count": 105,
+      "count_minmax": [ 105, 124 ],
+      "count_decinc": [ 19, 124 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -130,6 +121,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-18T00:00:00Z",
+      "count": 125,
+      "count_minmax": [ 125, 125 ],
+      "count_decinc": [ 0, 125 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
