@@ -3,13 +3,8 @@
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-03-04T00:00:00Z",
-      "count": 106,
-      "uniques": 2
-    },
-    {
       "timestamp": "2025-03-05T00:00:00Z",
-      "count": 124,
+      "count": 105,
       "uniques": 1
     },
     {
@@ -71,6 +66,11 @@
       "timestamp": "2025-03-17T00:00:00Z",
       "count": 125,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-18T00:00:00Z",
+      "count": 125,
+      "uniques": 2
     }
   ]
 }
